# mc7010tool

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: mc7010.h  util.h
src/: mc7010.cpp  util.cpp
